--- a/src/App.css
+++ b/src/App.css
@@ -3,31 +3,115 @@
 }
 :root {
   --Primarycolor: #034848;
-  --Secondarycolor: #95BFBF;
-  --Tablebg: #C0D3E4;
-  --inter:"Inter", sans-serif;
+  --Secondarycolor: #95bfbf;
+  --Tablebg: #c0d3e4;
+  --inter: "Inter", sans-serif;
+}
+.header {
+  .hamicons {
+    color: rgba(255, 255, 255, 0.479);
+  }
 }
 
-.sidebar
+/* .sidebar 
 {
- 
-  .ps-sidebar-root
+  min-width: 250px;
+  width: 280px;
+  background-color: var(--Secondarycolor);
+  padding:10px 0;
+  nav 
   {
-    background-color: #C7E1E1; 
-    width: 280px;
-    padding: 20px 0 80px;
-    min-height: calc(100vh - 76px);
-    .ps-sidebar-container 
+    ul 
     {
-      background: none;
+      z-index: 1;
+      li 
+      { 
+       
+        padding: 16px 0;
+        a {
+          display: flex;
+         position: relative;
+          justify-content: space-between;
+          padding-right: 20px;
+          align-items: center;
+          div 
+          {
+            span 
+            {
+              padding-left: 20px;
+              font-size: 30px;
+            }
+            label 
+            {
+              font-family: var(--inter);
+              font-size: 18px;
+              font-weight: 600;
+            }
+          }
+          span 
+          {
+            font-size: 16px;
+          }
+        .submenu 
+          {
+            padding: 20px;
+            height: fit-content;
+            background-color: transparent;
+           z-index: 999;
+           width: 100%;
+            position: absolute;
+            top: 0;
+            margin-top: 30px;
+            ul 
+            {
+
+              background-color: white;
+          
+            
+         
+            
+           li 
+           {
+            padding: 0;
+           
+            a 
+            {
+              display: flex;
+              justify-content: space-around;
+              padding: 8px 10px;
+              font-family: var(--inter);
+              font-size: 16px;
+              font-weight: 600;
+              overflow: hidden;
+              label 
+              {
+             
+              }
+            }
+           }
+          
+          }
+        }
+        }
+       
+      }
     }
-  
-    /* sidebar--collapsed */
-    &.ps-collapsed 
+  }
+
+} */
+
+/* .sidebar {
+  .ps-sidebar-root {
+    padding: 10px 0;
+    border: none;
+    background-color: #95bfbf;
+    width: 255px;
+
+    &.ps-collapsed  
     {
-      min-width: 65px;
-      .ps-submenu-content{
-        &.ps-open 
+      .ps-sidebar-container 
+      {
+        nav 
         {
           ul 
           {
@@ -35,81 +119,251 @@
             {
               a 
               {
-                padding:0 !important; 
+              .css-wx7wi4 {
+                  display: flex;
+                  width: 60px;
+                  margin:0;
+                  border:3px solid transparent;
+                  &.ps-open 
+                  {
+                   background-color: rgba(97, 183, 195, 0.34);
+                border-right: 3px solid var(--Primarycolor);
+                  }
+              
+               }
+              }
+              .ps-submenu-content {
+                background-color: transparent;
+                &.ps-open 
+                {
+                  
+                  .css-wlra1l {
+                    margin: 10px 19px;
+                    background-color: rgb(167, 32, 32);
+                    border-radius: 15px;
+                    padding:10px 0;
+                    z-index: 999;
+                    li {
+                      a {
+                        
+                        .css-wx7wi4
+                        {
+                          background-color: rgba(97, 183, 195, 0.34);
+                          border-right: 3px solid var(--Primarycolor);
+                         
+                        }
+                       
+                        &.ps-open {
+                        
+                        }
+                        
+                      }
+                    }
+                  }
+                }
+                
+              }
+           
+            }
+          }
+        }
+      }
+    }
+
+    .ps-sidebar-container {
+      background-color: transparent;
+      nav {
+        ul {
+          li {
+            a {
+              height: 54px;
+              padding-left: 0;
+              gap: 10px;
+              
+              .css-wx7wi4 {
+                 display: flex;
+                 width: 65px;
+                 min-width: 65px;
+                 border:3px solid transparent;
+                
+                 &.ps-open 
+                 {
+                  background-color: rgba(97, 183, 195, 0.34);
+               border-right: 3px solid var(--Primarycolor);
+              width: 60px;
+                 }
+             
+              }
+              .ps-submenu-expand-icon {
+                .css-1097eso {
+                  display: none;
+                }
+                .css-honxw6 {
+                  color: #034848;
+                  height: 8px;
+                  width: 8px;
+                }
+                .css-jn69v9 {
+                  color: #034848;
+                  height: 8px;
+                  width: 8px;
+                }
+              }
+              &.ps-open 
+              {
+               color:var(--Primarycolor);
                
+              }
+              &:hover 
+              {
+                background-color: transparent;
+                color: var(--Primarycolor);
+              }
+            }
+
+           
+            .ps-submenu-content {
+              background-color: transparent;
+              &.ps-open 
+              {
+               
+                .css-ewdv3l {
+                  margin: 10px 19px;
+                  background-color: white;
+                  border-radius: 15px;
+                  padding:10px 0;
+                  z-index: 999;
+                  li {
+                    &.ps-active 
+                    {
+                     
+                    }
+                    a {
+                     
+                      .css-wx7wi4
+                      {
+                        background-color: rgba(97, 183, 195, 0.34);
+                        border-right: 3px solid var(--Primarycolor);
+                       
+                      }
+                     
+                      &.ps-open {
+                      
+                      }
+                      
+                    }
+                  }
+                }
+              }
+              
+            }
+          }
+        }
+      }
+    }
+  }
+} */
+.sidebar {
+  &.closeside {
+    .ps-sidebar-root{
+      width: 76px !important;
+      min-width: auto;
+      .ps-sidebar-container {
+        overflow: visible;
+      }
+      .ps-menuitem-root {
+        position: relative;
+      }
+      .ps-submenu-content {
+        position: absolute;
+        top: 0;
+       
+        min-width: 100px;
+        background: #0eb6e9;
+      }
+    }
+  }
+  .ps-sidebar-root {
+    background-color: #c7e1e1;
+    width: 280px;
+    padding: 20px 0 80px;
+    min-height: calc(100vh - 76px);
+    .ps-sidebar-container {
+      background: none;
+    }
+
+    &.ps-collapsed {
+      min-width: 65px;
+
+      .ps-submenu-content {
+        position: relative;
+        overflow: visible;
+        &::before {
+          position: absolute;
+          width: 3px;
+          height: 35px;
+          background: #034848;
+          content: '';
+          left: -22px;
+          top: -8px;
+        }
+        &.ps-open {
+          ul {
+            li {
+              a {
+                padding: 0 !important;
               }
             }
           }
         }
-       
       }
-      .ps-menu-root{
-        .ps-menu-button 
-        {
-          padding-left:5px;
+      .ps-menu-root {
+        .ps-menu-button {
+          padding-left: 5px;
         }
       }
-     .ps-menu-button 
-     {
-      .ps-menu-icon{
-        min-width: 65px;
-      }
-    
-     &.ps-open 
-     {
-      .ps-menu-icon 
-      {
-        min-width: 65px;
-        &.ps-open 
-        {
-          background-color:rgba(97, 183, 195, 0.34) ;         
-            border-right: 3px solid #034848;
-          /* min-width: 65px; */
+      .ps-menu-button {
+        .ps-menu-icon {
+          min-width: 65px;
         }
-      
+
+        &.ps-open {
+          .ps-menu-icon {
+            min-width: 65px;
+            &.ps-open {
+              background-color: rgba(97, 183, 195, 0.34);
+              border-right: 3px solid;
+            }
+          }
+        }
       }
-     }
-     
-     }
     }
-    .ps-menu-button
-    {
+    .ps-menu-button {
       padding-left: 20px;
       display: flex;
       justify-content: space-between;
-      gap:30px;
-     
-      &.ps-open 
-      {
+      gap: 30px;
+
+      &.ps-open {
         color: #034848;
         background-color: transparent;
       }
-     
-      &:hover{
+
+      &:hover {
         color: #034848;
         background-color: transparent;
       }
-     
-     
-     
     }
-    /* menu item */
-    .ps-menu-root 
-    {
-      
-      .ps-submenu-content 
-      {
-   margin:0 10px;
-       
+
+    .ps-menu-root {
+      .ps-submenu-content {
+        margin: 0 10px;
+
         border-radius: 15px;
-        ul 
-        {
+        ul {
           padding: 8px 0;
-          li 
-          {
-           
-            a 
-            {
+          li {
+            a {
               height: 40px;
               padding: 8px 0;
             }
@@ -117,212 +371,164 @@
         }
       }
 
-      /* submenu items */
-     
-      .ps-submenu-root 
-      {
-        
-        margin:10px 0;
-        .ps-menu-button 
-        {
-            
+      .ps-submenu-root {
+        margin: 10px 0;
+        .ps-menu-button {
         }
-        .ps-menu-icon
-        {
-          
-         
-          padding-left:10px;
-        
-          margin:0;
+        .ps-menu-icon {
+          padding-left: 10px;
+
+          margin: 0;
           min-width: 65px;
-         
-          &.ps-open 
-          {
-           background-color:  rgba(97, 183, 195, 0.34);
+
+          &.ps-open {
+            background-color: rgba(97, 183, 195, 0.34);
             border-right: 3px solid #034848;
           }
-       
         }
-        .ps-menu-button
-      {
-        padding-left: 0;
-        display: flex;
-        justify-content: space-between;
-        gap:30px;
-        &.ps-open 
-        {
-          color: #034848;
-          background-color: transparent;
-        }
-       
-        &:hover{
-          color: #034848;
-          background-color: transparent;
-        }
-       
-       
-       
-      }
+        .ps-menu-button {
+          padding-left: 0;
+          display: flex;
+          justify-content: space-between;
+          gap: 30px;
+          &.ps-open {
+            color: #034848;
+            background-color: transparent;
+          }
 
-      /* expan icons */
-      .ps-submenu-expand-icon 
-      {
-       .css-1097eso
-       {
-        display: none;
-       }
-        .css-honxw6
-        {
-         color:#034848;
-         height: 8px;
-         width: 8px;
+          &:hover {
+            color: #034848;
+            background-color: transparent;
+          }
         }
-        .css-jn69v9
-        {
-          color:#034848;
-         height: 8px;
-         width: 8px;
+
+        .ps-submenu-expand-icon {
+          .css-1097eso {
+            display: none;
+          }
+          .css-honxw6 {
+            color: #034848;
+            height: 8px;
+            width: 8px;
+          }
+          .css-jn69v9 {
+            color: #034848;
+            height: 8px;
+            width: 8px;
+          }
         }
       }
-      }
-      
     }
   }
 }
-.footer 
-{
-  position:fixed;
+.footer {
+  position: fixed;
   width: 100%;
   bottom: 0;
-  z-index: 3  ;
-  .firstdiv
-  {
-  border-radius: 0px 40px 0px 0px;
+  z-index: 3;
+  .firstdiv {
+    border-radius: 0px 40px 0px 0px;
   }
-  .secondiv
-  {
+  .secondiv {
     border-radius: 40px 0px 0px 0px;
   }
 }
-.branchtable
-{
-  .addbtn
-  {
-    button 
-    {
+.branchtable {
+  .addbtn {
+    button {
       background-color: var(--Primarycolor);
-      color:white;
-      padding:5px 20px;
+      color: white;
+      padding: 5px 20px;
       font-family: var(--inter);
       font-weight: 500;
-      &:hover
-      {
+      &:hover {
         background-color: #082222;
       }
     }
-
   }
-  table 
-  {
+  table {
     width: 100%;
- 
-    thead 
-    {
-      th 
-      {
-        border-right: 1px solid #afafaf;
+
+    thead {
+      th {
+        border-right: 0.5px solid rgba(61, 99, 99, 0.4);
         background-color: var(--Tablebg);
-        padding:10px;
+        padding: 10px;
         font-weight: 600;
         font-family: var(--inter);
         text-align: start;
-        &:last-child
-        {
+        &:last-child {
           border-right: none;
         }
-       
-
       }
     }
-    tbody 
-    {
-      &:last-child 
-      {
-        border-bottom: none;
-      }
-     
-      td 
-      {
-        border: 1px solid #afafaf;
+    tbody {
+      td {
+        border: 0.5px solid rgba(61, 99, 99, 0.4);
         background-color: white;
         border-bottom: none;
-        padding:10px;
+        padding: 10px;
         font-weight: 400;
         font-family: var(--inter);
         text-align: start;
         font-size: 16px;
-        margin:0 !important;
-        button 
-        {
+        margin: 0 !important;
+        button {
           background: var(--Primarycolor);
           padding: 4px 18px;
           border-radius: 20px;
-          color:white;
+          color: white;
         }
-        &:nth-child(1)
-        {
-        
+        &:first-child {
           border-left: none;
         }
-        &:last-child
-        {
+        &:last-child {
           border-right: none;
-        
         }
-       
-        span 
-        {
+
+        span {
           font-size: 22px;
-          margin:0;
+          margin: 0;
         }
       }
     }
   }
 }
-.Branchform
-{
-  background-color: var(--Tablebg);
-  padding: 80px;
+.Branchform {
+  background-color: #f6fbff;
+  padding: 32px;
   padding-bottom: 120px;
- 
+  padding-top: 20px;
 
   height: 100%;
 
-  form 
-  {
+  form {
     background-color: white;
-    padding:10px 30px;
-    label 
-    {
+    position: relative;
+    padding: 10px 30px;
+    box-shadow: 0 4px 29px 0 rgba(55, 73, 90, 0.15);
+    label {
       font-family: var(--inter);
-      padding:5px 0;
+      padding: 5px 0;
       font-weight: 500;
-      span 
-      {
-        color:rgb(184, 26, 26);
+      span {
+        color: rgb(236, 37, 37);
       }
     }
-    
-    input 
-    {
-      border:1px solid rgb(173, 173, 173);
-      padding:8px 12px;
-      outline:none
+    .formbutton {
+      position: absolute;
+      bottom: 2em;
+      right: 3em;
     }
-    textarea 
-    {
-      border:1px solid rgb(173, 173, 173);
-      padding:10px 12px;
+
+    input {
+      border: 1.5px solid #c0d3e5;
+      padding: 8px 12px;
+      outline: none;
+    }
+    textarea {
+      border: 1.5px solid #c0d3e5;
+      padding: 10px 12px;
       outline: none;
     }
   }
