--- a/src/App.css
+++ b/src/App.css
@@ -13,89 +13,119 @@
   }
 }
 
-
-
-.inquirydiv 
-{
-  width: 50%;
-  height: fit-content;
+.inquirydiv {
+ height: fit-content;
   background-color: #cef0f0fa;
- 
-  transition:0.3s ease-in;
-  position:absolute;
+ width: 30%;
+  transition: 0.3s ease-in;
+  position: absolute;
   z-index: 2;
-  top:50%;
-  left:57%;
+  top: 50%;
+  left: 57%;
   transform: translate(-50%, -50%);
-  form 
+  border-radius: 5px;
+  .close 
   {
+    position: absolute;
+    right: 0;
+    top:0;
+    font-size: 22px;
+    cursor: pointer;
+    font-weight: 600 !important;
+    color: var(--Primarycolor);
+    }
+  form {
     height: 100%;
-    padding:50px;
-    label 
+    padding: 50px;
+   
+    .input-wrap 
     {
-    display: block;
-    font-size: 16px;
-    font-family: var(--inter);
-    padding-top: 20px;
+      border-bottom: 3px solid var(--Primarycolor);
     }
-    input 
+    label {
+      display: block;
+      font-size: 17px;
+      font-family: var(--inter);
+      padding-top: 20px;
+      font-weight: 500;
+    }
+    input {
+      width: 100%;
+     border:none;
+     background: transparent;
+      padding: 4px 10px;
+      outline: none;
+      &.internal-autofill-selected
+      {
+        background-color: transparent;
+      }
+    }
+    .fomrbtn
     {
       width: 100%;
-      border:1px solid #556666;
-      padding:4px 10px;
-
+      margin:auto;
+      display: flex;
+      margin-top: 20px;
+      justify-content: center;
+      button 
+      {
+        background-color: var(--Primarycolor);
+        color:white;
+        padding:5px 14px;
+        margin: 0 auto;
+        border-radius: 5px;
+      }
     }
-    textarea 
-    {
+    textarea {
       width: 100%;
-      border:1px solid #556666;
-
+ border:none;
+ outline:none;
+ background-color: transparent;
     }
-
   }
-
+  
 }
-.profileview
-{
+.overlay-black {
+  position: fixed;
+top: 0;
+left: 0;
+  background: rgba(0, 0, 0, 0.295);
+  content: '';
+  width: 100vw;
+  height: 100vh;
+}
+.profileview {
   height: 200px;
-  left:-60% ;
-  right: 0 ;
-  top:50px;
+  left: -60%;
+  right: 0;
+  top: 50px;
   background-color: #95bfbf;
   position: absolute;
   width: 250px;
   border-radius: 15px;
   padding: 20px;
   z-index: 2;
-  ul 
-  {
-li 
-{
-  font-size: 16px;
-    font-weight: 600;
-    font-family: var(--inter);
-    padding: 13px;
-    text-align: center;
-    text-transform: uppercase;
-   color:var(--Primarycolor);
-   &:hover 
-   {
-    background-color: var(--Primarycolor);
-    color:white;
-   }
-  a 
-  {
-    
-
+  ul {
+    li {
+      font-size: 16px;
+      font-weight: 600;
+      font-family: var(--inter);
+      padding: 13px;
+      text-align: center;
+      text-transform: uppercase;
+      color: var(--Primarycolor);
+      &:hover {
+        background-color: var(--Primarycolor);
+        color: white;
+      }
+      a {
+      }
+    }
   }
-}
-  }
-  
- 
 }
 
 .footer {
-position: fixed;
+  position: fixed;
   width: 100%;
   height: 50px;
   bottom: 0;
@@ -109,18 +139,15 @@ position: fixed;
     height: 100%;
     display: flex;
     align-items: center;
-    gap:30px;
-    .footer-icon 
-    {
+    gap: 30px;
+    .footer-icon {
       color: white;
       font-size: 20px;
-
     }
-    p 
-    {
+    p {
       color: white;
       font-family: var(--inter);
-      font-size:16px;
+      font-size: 16px;
     }
   }
 }
