--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -65,6 +65,7 @@
                             .menuname 
                             {
                                 display: flex;
+                                text-align: center;
                             }
                           }
                         }
@@ -111,7 +112,9 @@
                               display: flex;
                              justify-content: space-between;
                               font-size: 16px;
-                           
+                           .menuname{
+                            text-align: center;
+                           }
 
                             }
                             .activesubmenu 
@@ -119,8 +122,8 @@
                                 color: var(--Primarycolor);
                               .menuicons 
                               {
-                                background-color: var(--Primarycolor);
-                                border-right: 3px solid black;
+                                background-color: rgba(97, 183, 195, 0.34);
+                                border-right: 3px solid var(--Primarycolor);
                                 border-radius: 4px 0 0 4px;
 
                               }
@@ -156,8 +159,8 @@
                         color: var(--Primarycolor);
                         .menuicons 
                         {
-                            background-color: var(--Primarycolor);
-                            border-right: 3px solid black;
+                            background-color: rgba(97, 183, 195, 0.34);
+                            border-right: 3px solid var(--Primarycolor);
                         }
                      
                     }
@@ -165,6 +168,7 @@
                     {
                         padding: 5px 10px 5px 20px ;
                         border:3px solid transparent;
+                        cursor: pointer;
                      
                        
                         
