--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -110,7 +110,7 @@
                             a 
                             {
                               display: flex;
-                             justify-content: space-between;
+                         justify-content: flex-start;
                               font-size: 16px;
                            .menuname{
                             text-align: center;
