--- a/src/App.css
+++ b/src/App.css
@@ -178,7 +178,7 @@ left: 0;
         padding: 10px;
         font-weight: 600;
         font-family: var(--inter);
-        text-align: start;
+        text-align: center;
         &:last-child {
           border-right: none;
         }
@@ -192,7 +192,7 @@ left: 0;
         padding: 10px;
         font-weight: 400;
         font-family: var(--inter);
-        text-align: start;
+        text-align: center;
         font-size: 16px;
         margin: 0 !important;
         button {
