--- a/src/Menus/FiscalYearMenu/Fiscalyear.css
+++ b/src/Menus/FiscalYearMenu/Fiscalyear.css
@@ -2,9 +2,11 @@
 
 table 
 {
-  width:100%; 
+ 
+  width:100%;
   margin-top: 20px; 
   padding-bottom: 40px;
+
   th 
   {
     border-right: 0.5px solid rgba(61, 99, 99, 0.4);
@@ -13,6 +15,7 @@ table
     font-weight: 600;
     font-family: var(--inter);
     text-align: center;
+    width: 5em;
     &:last-child {
       border-right: none;
     }
@@ -30,6 +33,7 @@ table
         text-align: center;
         font-size: 16px;
         margin: 0 !important;
+        width: max-content;
         button {
           background: var(--Primarycolor);
           padding: 4px 18px;
