--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -1,7 +1,7 @@
 @import url(../App.css);
 .sidebar {
   margin-top: -76px;
-  padding: 76px 0 40px;
+  padding: 76px 0 0;
   min-height: 100vh;
   transition: 0.3s ease-in;
   /* overflow-y: auto; */
