--- a/src/App.css
+++ b/src/App.css
@@ -165,11 +165,18 @@ left: 0;
       }
     }
   }
+  .table-wrapper
+  {
+    height: 400px;
+    overflow-y: auto;
+  }
   
    
   table {
    
     width: 100%;
+  
+   
 
     thead {
       th {
