--- a/src/Global/Table/Table.css
+++ b/src/Global/Table/Table.css
@@ -110,9 +110,9 @@
   }
   .rdt_TableBody {
     .rdt_TableRow {
-      /* min-height: none;
+      min-height: none;
       max-height: 40px;
-      border-bottom: 0.5px solid rgba(61, 99, 99, 0.4); */
+      border-bottom: 0.5px solid rgba(61, 99, 99, 0.4);
       &:first-child {
         border-top: none;
       }
@@ -120,15 +120,17 @@
         border-bottom: 0.5px solid rgba(61, 99, 99, 0.4);
       }
       .rdt_TableCell {
-        /* border-left: 0.5px solid rgba(61, 99, 99, 0.4); */
-        /* background-color: white;
-        border-bottom: none;
-        padding: 10px;
+        /* border-left: 0.5px solid rgba(61, 99, 99, 0.4);
+        background-color: white; */
+        /* border-bottom: none; */
+        /* padding: 10px; */
         font-weight: 400;
-        font-family: var(--inter);
+        font-family: var(--inter);                           
         text-align: center;
         font-size: 16px;
-        margin: 0 !important; */
+        margin: 0 !important;
+      
+        /* background-color: blue; */
         /* &:first-child {
           border-left: none;
         }
