--- a/src/Global/Table/Table.css
+++ b/src/Global/Table/Table.css
@@ -64,22 +64,22 @@
   }
 }
 .huyunb {
-  height: calc(100% - 50px) !important;
+height: 57vh;
+overflow-y: auto !important;
 
-  overflow-y: auto;
 }
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
   .hUdreG {
     height: 100%;
   }
-}
+} */
 .rdt_Table {
-  /* height: 100%;
-    overflow-y: auto; */
+height: 100%;
+    
   .rdt_TableHead {
-    /* position: sticky;
+    position: sticky;
     top: 0;
-    z-index: 999; */
+    z-index: 999;
 
     .rdt_TableHeadRow {
       .rdt_TableCol {
