--- a/src/App.css
+++ b/src/App.css
@@ -261,11 +261,21 @@ left: 0;
       border: 1.5px solid #c0d3e5;
       padding: 8px 12px;
       outline: none;
+      &:focus
+      {
+        border:1px solid var(--Secondarycolor) ;
+        box-shadow: 1px 1px 2px var(--Secondarycolor);
+      }
     }
     textarea {
       border: 1.5px solid #c0d3e5;
       padding: 10px 12px;
       outline: none;
+      &:focus
+      {
+        border:1px solid var(--Secondarycolor) ;
+        box-shadow: 1px 1px 2px var(--Secondarycolor);
+      }
     }
   }
 }
