error message and field errro focus complete

--- a/src/App.css
+++ b/src/App.css
@@ -255,7 +255,7 @@ left: 0;
     }
   }
 }
-.Branchform {
+/* .Branchform {
   background-color: #f6fbff;
   padding: 32px;
   padding-bottom: 120px;
@@ -308,5 +308,5 @@ left: 0;
       }
     }
   }
-}
+} */
 
